<resources>
    <string name="app_name">Intern18Summer</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="february">FEBRUARY</string>
    <string name="good_morning">Good Morning</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="action1">New subpage for Janet</string>
    <string name="action2">Catch up with Tom</string>
    <string name="action3">Lunch with Diane</string>
    <string name="time1">8 to 10am</string>
    <string name="time2">11 to 12pm   Hangouts</string>
    <string name="time3">1pm   Restaurant</string>
    <string name="view">View and View Group</string>
    <string name="intent">Intent</string>
    <string name="activity">Activity and Fragment</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="view_pager">ViewPager</string>
    <string name="canvas">Canvas</string>
    <string name="unit_test">Unit Test</string>
    <string name="restful">RESTful</string>
    <string name="mail_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="sign_up_request">Sign Up?</string>
    <string name="log_in_label">LOG IN</string>
    <string name="log_in_use_social_account">Or log in using a social account</string>
    <string name="no_account">Do not have account yet?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up_label">SIGN UP</string>
    <string name="home_label">HOME</string>
    <string name="owner">Peter Pan</string>
    <string name="description">Today, what do we eat?</string>
    <string name="like">0 like</string>
    <string name="async_task_thread_handler">AsyncTask, Thread, Handler</string>
    <string name="async_task">AsyncTask</string>
    <string name="thread">Thread</string>
    <string name="handler">Handler</string>
    <string name="message_download">Please wait, Downloading your image file...</string>
    <string name="title_chart">Wildlife Population</string>
    <string name="dolphins">Dolphins</string>
    <string name="whales">Whales</string>
    <string name="upload_file">Upload File</string>
    <string name="download_file">Download File</string>
    <string name="read_file">Read File</string>
    <string name="add_photo">Add Photo</string>
    <string name="dowloading">Dowloading...</string>
    <string name="uploading">Uploading...</string>
    <string name="wait">Please wait, </string>
    <string name="token_api">6f5a48ac0e8aca77e0e8ef42e88962852b6ffaba01c16c5ba37ea13760c0317e</string>
    <string name="error">User and password are not empty</string>
</resources>
