<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTimberwolfapprox"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="asiantech.internship.summer.unit_test.UnitTestActivity">

    <TextView
        android:id="@+id/tvResult"
        style="@style/CustomEditLogin"
        android:gravity="center"
        android:textColor="@color/colorRed" />

    <EditText
        android:id="@+id/edtUsername"
        style="@style/CustomEditLogin"
        android:background="@drawable/border_edit_text_blur"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/CustomEditLogin"
        android:background="@drawable/border_edit_text_blur"
        android:hint="@string/pass_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/CustomEditLogin"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorTurquoiseBlue"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/log_in_label" />

    <TextView
        style="@style/CustomEditLogin"
        android:layout_width="wrap_content"
        android:text="@string/log_in_use_social_account"
        android:textColor="@color/colorMineShaft"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/colorPomegranate"
            android:src="@drawable/ic_google" />

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSanMarino"
            android:src="@drawable/ic_facebook" />
    </LinearLayout>

    <TextView
        style="@style/CustomEditLogin"
        android:gravity="center"
        android:text="@string/no_account"
        android:textColor="@color/colorTurquoiseBlue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        style="@style/CustomEditLogin"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorTurquoiseBlue"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
