<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6373ca"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit_text"
        android:hint="@string/mail_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#e8eaf6"
        android:textColorHint="#e8eaf6" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_edit_text"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#e8eaf6"
        android:textColorHint="#e8eaf6" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_edit_text"
        android:hint="@string/confirm_pass_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#e8eaf6"
        android:textColorHint="#e8eaf6" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/sign_up_label"
        android:textColor="#e8eaf6"
        android:textSize="34sp"
        android:textStyle="bold" />
</LinearLayout>
